# crm-app

./: .gitignore  .pre-commit-config.yaml  README.md  mydb.py  requirements.txt
backend/: .gitignore  pyproject.toml
backend/endpoints/: endpoints.py  test_service.py
backend/schema/: request_body.py  response_body.py
backend/services/: services.py
chatire/: db.sqlite3
chatire/chatire/: asgi.py  settings.py  urls.py  wsgi.py
dcrm/: settings.py  urls.py
dcrm/dcrm/: settings.py
fact_finder_app/: package-lock.json  package.json
fact_finder_app/src/: App.js
frontend/: .gitignore
website/: admin.py  forms.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py
website/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html  update_record.html
website/tests/: test_urls.py
