[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for project FactFinder with connect PublicAPI"
authors = ["6akee <almassov.bauyrzhan@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
